# proboscis_dyna_io

./: CMakeLists.txt  README.md  package.xml
Model/: actuationMatrix_analysis.m  actuation_analysis.m  actuation_test.m  equality_constraint.mat  euler_equation.mat  optimal_cable_path.m  optimal_setup.m  plotRobotq0.m  solve_eq.m  test_plotRobot.m  trivialGVS.m
Model/autogen_functions/: B_tau_sol1.m
Model/figures/sol1/: orth_projection.fig
Model/functions/: actuationMatrix.m  biezerCurve.m  ellipse3D.m  plotRobotq0.m  prettyStrainPlot.m  trivialGVS.m  vec6D2se3.m
config/: motors_params.yaml
include/proboscis_dyna_io/: ros_utils.h
include/proboscis_pkg/control/: control_utils.h
launch/: motor_io.launch  motor_testing.launch
proboscis_pkg/: CMakeLists.txt  package.xml
proboscis_pkg/include/proboscis_pkg/: control_utils.h  dynamixel_utils.h  dynamixel_utils.hpp  ros_utils.h
proboscis_pkg/include/proboscis_pkg/control/: B_tau_sol1.h  control_utils.h  optimal_control_lib.h
proboscis_pkg/include/proboscis_pkg/dynamixel/: dynamixel_utils.h  ros_utils.h
proboscis_pkg/include/proboscis_pkg/math/: math_utility.h
proboscis_pkg/launch/: joystick_control.launch  joystick_testing.launch  motor_testing.launch
proboscis_pkg/src/: control_utils.cpp  controller.cpp  dynamixel_utils.cpp  motor_io.cpp  ros_utils.cpp
proboscis_pkg/src/control/: control_utils.cpp  controller.cpp
proboscis_pkg/src/dynamixel/: dynamixel_utils.cpp  motor_io.cpp
proboscis_pkg/src/math/: math_utility.cpp
src/: motor_io.cpp  ros_utils.cpp
